fix(all): update jopt simple, no extra spaces when calling Executor