@@ -1,7 +1,10 @@
 package org.qcmg.coverage;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertTrue;
+import htsjdk.samtools.SAMFileHeader.SortOrder;
+import org.junit.*;
+import org.qcmg.common.commandline.Executor;
+import org.qcmg.qio.gff3.Gff3Record;
+import org.qcmg.qio.record.RecordWriter;
 
 import java.io.BufferedReader;
 import java.io.File;
@@ -10,20 +13,9 @@ import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.List;
-import java.util.stream.Collectors;
 
-import htsjdk.samtools.SAMFileHeader.SortOrder;
-
-import org.junit.After;
-import org.junit.AfterClass;
-import org.junit.Before;
-import org.junit.BeforeClass;
-import org.junit.Rule;
-import org.junit.Test;
-import org.junit.rules.ExpectedException;
-import org.qcmg.common.commandline.Executor;
-import org.qcmg.qio.record.RecordWriter;
-import org.qcmg.qio.gff3.Gff3Record;
+import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertTrue;
 
 public class MultiBamPhysicalCoverageTest {
 	
@@ -35,9 +27,6 @@ public class MultiBamPhysicalCoverageTest {
 	private File fOutput;
 	private String fname;
 	static Gff3Record record;
-	
-	@Rule
-	public ExpectedException thrown = ExpectedException.none();
 	
 	@BeforeClass
 	 public static void setup() throws IOException {
@@ -74,10 +63,10 @@ public class MultiBamPhysicalCoverageTest {
 		}
 		
 		private String getCmd(int start, int stop) {
-			return "--log " + tmpDir + "/logfile --type  phys --input-gff3 " + tmpDir + "/test" + start + "-" + stop + ".gff3 --input-bam " + inputBam + " --input-bai " + inputBai + " --input-bam " + inputBam2 + " --input-bai " + inputBai2 + " --output " +fname;
+			return "--log " + tmpDir + "/logfile --type phys --input-gff3 " + tmpDir + "/test" + start + "-" + stop + ".gff3 --input-bam " + inputBam + " --input-bai " + inputBai + " --input-bam " + inputBam2 + " --input-bai " + inputBai2 + " --output " +fname;
 		}
 
-		private File createGFF3File(final int start, final int end) throws IOException {
+		private void createGFF3File(final int start, final int end) throws IOException {
 			record.setStart(start);
 			record.setEnd(end);
 
@@ -85,7 +74,6 @@ public class MultiBamPhysicalCoverageTest {
 			try (RecordWriter<Gff3Record> writer = new RecordWriter<>(file)) {
 				writer.add(record);
 			}
-			return file;
 		}
 
 	private Executor execute(final String command) throws IOException, InterruptedException {
@@ -97,15 +85,14 @@ public class MultiBamPhysicalCoverageTest {
 	public final void leftDisjointRead() throws IOException, InterruptedException {
 		createGFF3File(54000, 54025);
 		
-		ExpectedException.none();
 		Executor exec = execute(getCmd(54000, 54025));
-		
-		assertTrue(0 == exec.getErrCode());
+
+        assertEquals(0, exec.getErrCode());
 		assertTrue(fOutput.exists());
 		
 		List<String> fileContents;
 		try (BufferedReader r= new BufferedReader( new FileReader(fOutput))) {
-			fileContents = r.lines().collect(Collectors.toList());
+			fileContents = r.lines().toList();
 		}
 		
 		assertEquals(2, fileContents.size());
@@ -116,15 +103,14 @@ public class MultiBamPhysicalCoverageTest {
 	public final void rightDisjointRead() throws IOException, InterruptedException {
 		createGFF3File(54077, 54120);
 
-		ExpectedException.none();
 		Executor exec = execute(getCmd(54077, 54120));
- 
-		assertTrue(0 == exec.getErrCode());
+
+        assertEquals(0, exec.getErrCode());
 		assertTrue(fOutput.exists());
 		
 		List<String> fileContents;
 		try (BufferedReader r= new BufferedReader( new FileReader(fOutput))) {
-			fileContents = r.lines().collect(Collectors.toList());
+			fileContents = r.lines().toList();
 		}
 		
 		assertEquals(2, fileContents.size());
@@ -135,15 +121,14 @@ public class MultiBamPhysicalCoverageTest {
 	public final void leftOnEndRead() throws IOException, InterruptedException {
 		createGFF3File(54000, 54026);
 
-		ExpectedException.none();
 		Executor exec = execute(getCmd(54000, 54026));
 
-		assertTrue(0 == exec.getErrCode());
+        assertEquals(0, exec.getErrCode());
 		assertTrue(fOutput.exists());
 		
 	 	List<String> fileContents;
 	    	try (BufferedReader r= new BufferedReader( new FileReader(fOutput))) {
-	    		fileContents = r.lines().collect(Collectors.toList());
+	    		fileContents = r.lines().toList();
 	    	}
 	    	
 	    	assertEquals(3, fileContents.size());
@@ -155,15 +140,14 @@ public class MultiBamPhysicalCoverageTest {
   	public final void rightOnEndRead() throws Exception {
       	createGFF3File(54076, 54120);
 
-  		ExpectedException.none();
   		Executor exec = execute(getCmd(54076, 54120));
-  		
-  		assertTrue(0 == exec.getErrCode());
+
+        assertEquals(0, exec.getErrCode());
   		assertTrue(fOutput.exists());
   		
   		List<String> fileContents;
   		try (BufferedReader r= new BufferedReader( new FileReader(fOutput))) {
-  			fileContents = r.lines().collect(Collectors.toList());
+  			fileContents = r.lines().toList();
   		}
   		
   		assertEquals(2, fileContents.size());
@@ -174,15 +158,14 @@ public class MultiBamPhysicalCoverageTest {
 	public final void leftOverlapRead() throws IOException, InterruptedException {
     	createGFF3File(54000, 54036);
 
-		ExpectedException.none();
 		Executor exec = execute(getCmd(54000, 54036));
-		
-		assertTrue(0 == exec.getErrCode());
+
+        assertEquals(0, exec.getErrCode());
 		assertTrue(fOutput.exists());
 		
 		List<String> fileContents;
 		try (BufferedReader r= new BufferedReader( new FileReader(fOutput))) {
-			fileContents = r.lines().collect(Collectors.toList());
+			fileContents = r.lines().toList();
 		}
 		
 		assertEquals(3, fileContents.size());
@@ -192,17 +175,16 @@ public class MultiBamPhysicalCoverageTest {
 
     @Test
 	public final void rightOverlapRead() throws IOException, InterruptedException {
-    		createGFF3File(54050, 54120);
+		createGFF3File(54050, 54120);
 
-		ExpectedException.none();
 		Executor exec = execute(getCmd(54050, 54120));
-		
-		assertTrue(0 == exec.getErrCode());
+
+        assertEquals(0, exec.getErrCode());
 		assertTrue(fOutput.exists());
 		
 		List<String> fileContents;
 		try (BufferedReader r= new BufferedReader( new FileReader(fOutput))) {
-			fileContents = r.lines().collect(Collectors.toList());
+			fileContents = r.lines().toList();
 		}
 		
 		assertEquals(3, fileContents.size());
@@ -215,26 +197,17 @@ public class MultiBamPhysicalCoverageTest {
 	public final void subsetRead() throws IOException, InterruptedException {
     	createGFF3File(54030, 54070);
 
-		ExpectedException.none();
 		Executor exec = execute(getCmd(54030, 54070));
-		
-		assertTrue(0 == exec.getErrCode());
+
+        assertEquals(0, exec.getErrCode());
 		assertTrue(fOutput.exists());
 		
 		List<String> fileContents;
 		try (BufferedReader r= new BufferedReader( new FileReader(fOutput))) {
-			fileContents = r.lines().collect(Collectors.toList());
+			fileContents = r.lines().toList();
 		}
 		
 		assertEquals(2, fileContents.size());
 		assertEquals("physical	exon	41	2x", fileContents.get(1));
 	}
-    
-    @Test
-	public final void xu() throws IOException, InterruptedException {
-    	
-    	String str = getCmd(54030, 54070);
-    	
-    	System.out.println("xu test getCmd: " + str);
-    }
 }
