@@ -1,7 +1,10 @@
 package org.qcmg.coverage;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertTrue;
+import htsjdk.samtools.SAMFileHeader.SortOrder;
+import org.junit.*;
+import org.qcmg.common.commandline.Executor;
+import org.qcmg.qio.gff3.Gff3Record;
+import org.qcmg.qio.record.RecordWriter;
 
 import java.io.BufferedReader;
 import java.io.File;
@@ -10,20 +13,9 @@ import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.List;
-import java.util.stream.Collectors;
 
-import htsjdk.samtools.SAMFileHeader.SortOrder;
-
-import org.junit.After;
-import org.junit.AfterClass;
-import org.junit.Before;
-import org.junit.BeforeClass;
-import org.junit.Rule;
-import org.junit.Test;
-import org.junit.rules.ExpectedException;
-import org.qcmg.common.commandline.Executor;
-import org.qcmg.qio.gff3.Gff3Record;
-import org.qcmg.qio.record.RecordWriter;
+import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertTrue;
 
 public class PerFeaturePhysicalCoverageTest {
  
@@ -34,11 +26,7 @@ public class PerFeaturePhysicalCoverageTest {
 	private String fname;
 	static Gff3Record record;
 
-	
-	@Rule
-	public ExpectedException thrown = ExpectedException.none();
-	
-	
+
 	@BeforeClass
 	 public static void setup() throws IOException {
 		 tmpDir = Files.createTempDirectory(null);
@@ -72,10 +60,10 @@ public class PerFeaturePhysicalCoverageTest {
 	}
 	
 	private String getCmd(int start, int stop) {
-		return "--log " + tmpDir + "/logfile --type phys --per-feature --input-gff3 " + tmpDir + "/test" + start + "-" + stop + ".gff3 --input-bam " + inputBam + " --input-bai  " + inputBai + " --output " +fname;
+		return "--log " + tmpDir + "/logfile --type phys --per-feature --input-gff3 " + tmpDir + "/test" + start + "-" + stop + ".gff3 --input-bam " + inputBam + " --input-bai " + inputBai + " --output " +fname;
 	}
 
-	private File createGFF3File(final int start, final int end) throws IOException {
+	private void createGFF3File(final int start, final int end) throws IOException {
 		record.setStart(start);
 		record.setEnd(end);
 
@@ -83,28 +71,25 @@ public class PerFeaturePhysicalCoverageTest {
 		try (RecordWriter<Gff3Record> writer = new RecordWriter<>(file)) {
 			writer.add(record);
 		}
-		return file;
 	}
 
 	private Executor execute(final String command) throws Exception {
-		//return new Executor(command, "org.qcmg.coverage.Main");
 		return new Executor(command, "org.qcmg.coverage.Coverage");
 
 	}
 	
     @Test
 	public final void leftDisjointRead() throws Exception {
-    		createGFF3File(54000, 54025);
+		createGFF3File(54000, 54025);
 
-		ExpectedException.none();
 		Executor exec = execute(getCmd(54000, 54025));
-		
-		assertTrue(0 == exec.getErrCode());
+
+        assertEquals(0, exec.getErrCode());
 		assertTrue(fOutput.exists());
 		
 		List<String> fileContents;
 		try (BufferedReader r= new BufferedReader( new FileReader(fOutput))) {
-			fileContents = r.lines().collect(Collectors.toList());
+			fileContents = r.lines().toList();
 		}
 		
 		assertEquals(3, fileContents.size());
@@ -116,15 +101,14 @@ public class PerFeaturePhysicalCoverageTest {
 	public final void rightDisjointRead() throws Exception {
     	createGFF3File(54077, 54120);
 
-		ExpectedException.none();
 		Executor exec = execute(getCmd(54077, 54120));
-		
-		assertTrue(0 == exec.getErrCode());
+
+        assertEquals(0, exec.getErrCode());
 		assertTrue(fOutput.exists());
 		
 		List<String> fileContents;
 		try (BufferedReader r= new BufferedReader( new FileReader(fOutput))) {
-			fileContents = r.lines().collect(Collectors.toList());
+			fileContents = r.lines().toList();
 		}
 		
 		assertEquals(3, fileContents.size());
@@ -135,17 +119,16 @@ public class PerFeaturePhysicalCoverageTest {
    
     @Test
 	public final void leftOnEndRead() throws Exception {
-    		createGFF3File(54000, 54026);
+		createGFF3File(54000, 54026);
 
-		ExpectedException.none();
 		Executor exec = execute(getCmd(54000, 54026));
-		
-		assertTrue(0 == exec.getErrCode());
+
+        assertEquals(0, exec.getErrCode());
 		assertTrue(fOutput.exists());
 		
 		List<String> fileContents;
 		try (BufferedReader r= new BufferedReader( new FileReader(fOutput))) {
-			fileContents = r.lines().collect(Collectors.toList());
+			fileContents = r.lines().toList();
 		}
 		
 		assertEquals(4, fileContents.size());
@@ -158,15 +141,14 @@ public class PerFeaturePhysicalCoverageTest {
 	public final void rightOnEndRead() throws Exception {
     	createGFF3File(54076, 54120);
 
-		ExpectedException.none();
 		Executor exec = execute(getCmd(54076, 54120));
-		
-		assertTrue(0 == exec.getErrCode());
+
+        assertEquals(0, exec.getErrCode());
 		assertTrue(fOutput.exists());
 		
 		List<String> fileContents;
 		try (BufferedReader r= new BufferedReader( new FileReader(fOutput))) {
-			fileContents = r.lines().collect(Collectors.toList());
+			fileContents = r.lines().toList();
 		}
 		
 		assertEquals(3, fileContents.size());
@@ -178,42 +160,40 @@ public class PerFeaturePhysicalCoverageTest {
 	public final void leftOverlapRead() throws Exception {
      	createGFF3File(54000, 54036);
 
-    		ExpectedException.none();
-    		Executor exec = execute(getCmd(54000, 54036));
-    		
-    		assertTrue(0 == exec.getErrCode());
-    		assertTrue(fOutput.exists());
-    		
-    		List<String> fileContents;
-    		try (BufferedReader r= new BufferedReader( new FileReader(fOutput))) {
-    			fileContents = r.lines().collect(Collectors.toList());
-    		}
-    		
-    		assertEquals(4, fileContents.size());
-    		assertEquals("#chr1	.	exon	54000	54036	.	+	null	", fileContents.get(1));
-    		assertEquals("physical	26	0x", fileContents.get(2));
-    		assertEquals("physical	11	1x", fileContents.get(3));
+		Executor exec = execute(getCmd(54000, 54036));
+
+        assertEquals(0, exec.getErrCode());
+		assertTrue(fOutput.exists());
+
+		List<String> fileContents;
+		try (BufferedReader r= new BufferedReader( new FileReader(fOutput))) {
+			fileContents = r.lines().toList();
+		}
+
+		assertEquals(4, fileContents.size());
+		assertEquals("#chr1	.	exon	54000	54036	.	+	null	", fileContents.get(1));
+		assertEquals("physical	26	0x", fileContents.get(2));
+		assertEquals("physical	11	1x", fileContents.get(3));
 	}
 
     @Test
 	public final void rightOverlapRead() throws Exception {
      	createGFF3File(54050, 54120);
 
-    		ExpectedException.none();
-    		Executor exec = execute(getCmd(54050, 54120));
-    		
-    		assertTrue(0 == exec.getErrCode());
-    		assertTrue(fOutput.exists());
-    		
-    		List<String> fileContents;
-    		try (BufferedReader r= new BufferedReader( new FileReader(fOutput))) {
-    			fileContents = r.lines().collect(Collectors.toList());
-    		}
-    		
-    		assertEquals(4, fileContents.size());
-    		assertEquals("#chr1	.	exon	54050	54120	.	+	null	", fileContents.get(1));
-    		assertEquals("physical	50	0x", fileContents.get(2));
-    		assertEquals("physical	21	1x", fileContents.get(3));
+		Executor exec = execute(getCmd(54050, 54120));
+
+        assertEquals(0, exec.getErrCode());
+		assertTrue(fOutput.exists());
+
+		List<String> fileContents;
+		try (BufferedReader r= new BufferedReader( new FileReader(fOutput))) {
+			fileContents = r.lines().toList();
+		}
+
+		assertEquals(4, fileContents.size());
+		assertEquals("#chr1	.	exon	54050	54120	.	+	null	", fileContents.get(1));
+		assertEquals("physical	50	0x", fileContents.get(2));
+		assertEquals("physical	21	1x", fileContents.get(3));
 	}
 
     
@@ -221,19 +201,18 @@ public class PerFeaturePhysicalCoverageTest {
 	public final void subsetRead() throws Exception {
       	createGFF3File(54030, 54070);
 
-    		ExpectedException.none();
-    		Executor exec = execute(getCmd(54030, 54070));
-    		
-    		assertTrue(0 == exec.getErrCode());
-    		assertTrue(fOutput.exists());
-    		
-    		List<String> fileContents;
-    		try (BufferedReader r= new BufferedReader( new FileReader(fOutput))) {
-    			fileContents = r.lines().collect(Collectors.toList());
-    		}
-    		
-    		assertEquals(3, fileContents.size());
-    		assertEquals("#chr1	.	exon	54030	54070	.	+	null	", fileContents.get(1));
-    		assertEquals("physical	41	1x", fileContents.get(2));
+		Executor exec = execute(getCmd(54030, 54070));
+
+        assertEquals(0, exec.getErrCode());
+		assertTrue(fOutput.exists());
+
+		List<String> fileContents;
+		try (BufferedReader r= new BufferedReader( new FileReader(fOutput))) {
+			fileContents = r.lines().toList();
+		}
+
+		assertEquals(3, fileContents.size());
+		assertEquals("#chr1	.	exon	54030	54070	.	+	null	", fileContents.get(1));
+		assertEquals("physical	41	1x", fileContents.get(2));
 	}
 }
