@@ -1,7 +1,10 @@
 package org.qcmg.coverage;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertTrue;
+import htsjdk.samtools.SAMFileHeader.SortOrder;
+import org.junit.*;
+import org.qcmg.common.commandline.Executor;
+import org.qcmg.qio.gff3.Gff3Record;
+import org.qcmg.qio.record.RecordWriter;
 
 import java.io.BufferedReader;
 import java.io.File;
@@ -10,20 +13,9 @@ import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.List;
-import java.util.stream.Collectors;
 
-import htsjdk.samtools.SAMFileHeader.SortOrder;
-
-import org.junit.After;
-import org.junit.AfterClass;
-import org.junit.Before;
-import org.junit.BeforeClass;
-import org.junit.Rule;
-import org.junit.Test;
-import org.junit.rules.ExpectedException;
-import org.qcmg.common.commandline.Executor;
-import org.qcmg.qio.gff3.Gff3Record;
-import org.qcmg.qio.record.RecordWriter;
+import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertTrue;
 
 public class QuerySequenceCoverageTest {
  	
@@ -34,9 +26,7 @@ public class QuerySequenceCoverageTest {
 	private String fname;
 	static Gff3Record record;
 
-	@Rule
-	public ExpectedException thrown = ExpectedException.none();
-	
+
 	 @BeforeClass
 	 public static void setup() throws Exception {
 		 tmpDir = Files.createTempDirectory(null);
@@ -70,13 +60,13 @@ public class QuerySequenceCoverageTest {
 	}
 	
 	private String getCmd(int start, int stop) {
-		return "--log " + tmpDir + "/logfile --type seq --query Cigar_M>35 --input-gff3 " + tmpDir + "/test" + start + "-" + stop + ".gff3 --input-bam " + inputBam + " --input-bai  " + inputBai + " --output " +fname;
+		return "--log " + tmpDir + "/logfile --type seq --query Cigar_M>35 --input-gff3 " + tmpDir + "/test" + start + "-" + stop + ".gff3 --input-bam " + inputBam + " --input-bai " + inputBai + " --output " +fname;
 	}
 	private String getExCmd(int start, int stop) {
-		return "--log " + tmpDir + "/logfile --type seq --query Cigar_M>45 --input-gff3 " + tmpDir + "/test" + start + "-" + stop + ".gff3 --input-bam " + inputBam + " --input-bai  " + inputBai + " --output " +fname;
+		return "--log " + tmpDir + "/logfile --type seq --query Cigar_M>45 --input-gff3 " + tmpDir + "/test" + start + "-" + stop + ".gff3 --input-bam " + inputBam + " --input-bai " + inputBai + " --output " +fname;
 	}
 
-	private File createGFF3File(final int start, final int end) throws IOException {
+	private void createGFF3File(final int start, final int end) throws IOException {
 		record.setStart(start);
 		record.setEnd(end);
 
@@ -84,7 +74,6 @@ public class QuerySequenceCoverageTest {
 		try (RecordWriter<Gff3Record> writer = new RecordWriter<>(file)) {
 			writer.add(record);
 		}
-		return file;
 	}
 
 	private Executor execute(final String command) throws IOException, InterruptedException {
@@ -97,15 +86,14 @@ public class QuerySequenceCoverageTest {
 	public final void leftDisjointReadSeqCov() throws Exception {
 		createGFF3File(54000, 54025);
 
-		ExpectedException.none();
 		Executor exec = execute(getCmd(54000, 54025));
-		
-		assertTrue(0 == exec.getErrCode());
+
+        assertEquals(0, exec.getErrCode());
 		assertTrue(fOutput.exists());
 		
 		List<String> fileContents;
 		try (BufferedReader r= new BufferedReader( new FileReader(fOutput))) {
-			fileContents = r.lines().collect(Collectors.toList());
+			fileContents = r.lines().toList();
 		}
 		
 		assertEquals(2, fileContents.size());
@@ -116,15 +104,14 @@ public class QuerySequenceCoverageTest {
 	public final void leftDisjointReadSeqCovEx() throws IOException, InterruptedException {
 		createGFF3File(54000, 54025);
 		
-		ExpectedException.none();
 		Executor exec = execute(getExCmd(54000, 54025));
-		
-		assertTrue(0 == exec.getErrCode());
+
+        assertEquals(0, exec.getErrCode());
 		assertTrue(fOutput.exists());
 		
 		List<String> fileContents;
 		try (BufferedReader r= new BufferedReader( new FileReader(fOutput))) {
-			fileContents = r.lines().collect(Collectors.toList());
+			fileContents = r.lines().toList();
 		}
 		
 		assertEquals(2, fileContents.size());
@@ -133,17 +120,16 @@ public class QuerySequenceCoverageTest {
 
 	@Test
 	public final void rightDisjointRead() throws IOException, InterruptedException {
-    		createGFF3File(54077, 54120);
+		createGFF3File(54077, 54120);
 
-		ExpectedException.none();
 		Executor exec = execute(getCmd(54077, 54120));
-		
-		assertTrue(0 == exec.getErrCode());
+
+        assertEquals(0, exec.getErrCode());
 		assertTrue(fOutput.exists());
 		
 		List<String> fileContents;
 		try (BufferedReader r= new BufferedReader( new FileReader(fOutput))) {
-			fileContents = r.lines().collect(Collectors.toList());
+			fileContents = r.lines().toList();
 		}
 		
 		assertEquals(2, fileContents.size());
@@ -153,36 +139,34 @@ public class QuerySequenceCoverageTest {
     
     @Test
     public final void rightDisjointReadEx() throws IOException, InterruptedException {
-	    	createGFF3File(54077, 54120);
-	    	
-	    	ExpectedException.none();
-	    	Executor exec = execute(getExCmd(54077, 54120));
-	    	
-	    	assertTrue(0 == exec.getErrCode());
-	    	assertTrue(fOutput.exists());
-	    	
-	    	List<String> fileContents;
-	    	try (BufferedReader r= new BufferedReader( new FileReader(fOutput))) {
-	    		fileContents = r.lines().collect(Collectors.toList());
-	    	}
-	    	
-	    	assertEquals(2, fileContents.size());
-	    	assertEquals("sequence	exon	44	0x", fileContents.get(1));
+		createGFF3File(54077, 54120);
+
+		Executor exec = execute(getExCmd(54077, 54120));
+
+        assertEquals(0, exec.getErrCode());
+		assertTrue(fOutput.exists());
+
+		List<String> fileContents;
+		try (BufferedReader r= new BufferedReader( new FileReader(fOutput))) {
+			fileContents = r.lines().toList();
+		}
+
+		assertEquals(2, fileContents.size());
+		assertEquals("sequence	exon	44	0x", fileContents.get(1));
     }
    
     @Test
 	public final void leftOnEndRead() throws IOException, InterruptedException {
-    		createGFF3File(54000, 54026);
+		createGFF3File(54000, 54026);
 
-		ExpectedException.none();
 		Executor exec = execute(getCmd(54000, 54026));
-		
-		assertTrue(0 == exec.getErrCode());
+
+        assertEquals(0, exec.getErrCode());
 		assertTrue(fOutput.exists());
 		
 		List<String> fileContents;
 		try (BufferedReader r= new BufferedReader( new FileReader(fOutput))) {
-			fileContents = r.lines().collect(Collectors.toList());
+			fileContents = r.lines().toList();
 		}
 		
 		assertEquals(3, fileContents.size());
@@ -192,36 +176,34 @@ public class QuerySequenceCoverageTest {
     
     @Test
     public final void leftOnEndReadEx() throws IOException, InterruptedException {
-	    	createGFF3File(54000, 54026);
-	    	
-	    	ExpectedException.none();
-	    	Executor exec = execute(getExCmd(54000, 54026));
-	    	
-	    	assertTrue(0 == exec.getErrCode());
-	    	assertTrue(fOutput.exists());
-	    	
-	    	List<String> fileContents;
-	    	try (BufferedReader r= new BufferedReader( new FileReader(fOutput))) {
-	    		fileContents = r.lines().collect(Collectors.toList());
-	    	}
-	    	
-	    	assertEquals(2, fileContents.size());
-	    	assertEquals("sequence	exon	27	0x", fileContents.get(1));
+		createGFF3File(54000, 54026);
+
+		Executor exec = execute(getExCmd(54000, 54026));
+
+        assertEquals(0, exec.getErrCode());
+		assertTrue(fOutput.exists());
+
+		List<String> fileContents;
+		try (BufferedReader r= new BufferedReader( new FileReader(fOutput))) {
+			fileContents = r.lines().toList();
+		}
+
+		assertEquals(2, fileContents.size());
+		assertEquals("sequence	exon	27	0x", fileContents.get(1));
     }
 
     @Test
 	public final void rightOnEndRead() throws IOException, InterruptedException {
-    		createGFF3File(54076, 54120);
+		createGFF3File(54076, 54120);
 
-		ExpectedException.none();
 		Executor exec = execute(getCmd(54076, 54120));
-		
-		assertTrue(0 == exec.getErrCode());
+
+        assertEquals(0, exec.getErrCode());
 		assertTrue(fOutput.exists());
 		
 		List<String> fileContents;
 		try (BufferedReader r= new BufferedReader( new FileReader(fOutput))) {
-			fileContents = r.lines().collect(Collectors.toList());
+			fileContents = r.lines().toList();
 		}
 		
 		assertEquals(2, fileContents.size());
@@ -230,36 +212,34 @@ public class QuerySequenceCoverageTest {
     
     @Test
     public final void rightOnEndReadEx() throws IOException, InterruptedException {
-	    	createGFF3File(54076, 54120);
-	    	
-	    	ExpectedException.none();
-	    	Executor exec = execute(getExCmd(54076, 54120));
-	    	
-	    	assertTrue(0 == exec.getErrCode());
-	    	assertTrue(fOutput.exists());
-	    	
-	    	List<String> fileContents;
-	    	try (BufferedReader r= new BufferedReader( new FileReader(fOutput))) {
-	    		fileContents = r.lines().collect(Collectors.toList());
-	    	}
-	    	
-	    	assertEquals(2, fileContents.size());
-	    	assertEquals("sequence	exon	45	0x", fileContents.get(1));
+		createGFF3File(54076, 54120);
+
+		Executor exec = execute(getExCmd(54076, 54120));
+
+        assertEquals(0, exec.getErrCode());
+		assertTrue(fOutput.exists());
+
+		List<String> fileContents;
+		try (BufferedReader r= new BufferedReader( new FileReader(fOutput))) {
+			fileContents = r.lines().toList();
+		}
+
+		assertEquals(2, fileContents.size());
+		assertEquals("sequence	exon	45	0x", fileContents.get(1));
     }
 
     @Test
 	public final void leftOverlapRead() throws IOException, InterruptedException {
     	createGFF3File(54000, 54036);
 
-		ExpectedException.none();
 		Executor exec = execute(getCmd(54000, 54036));
-		
-		assertTrue(0 == exec.getErrCode());
+
+        assertEquals(0, exec.getErrCode());
 		assertTrue(fOutput.exists());
 		
 		List<String> fileContents;
 		try (BufferedReader r= new BufferedReader( new FileReader(fOutput))) {
-			fileContents = r.lines().collect(Collectors.toList());
+			fileContents = r.lines().toList();
 		}
 		
 		assertEquals(3, fileContents.size());
@@ -269,36 +249,34 @@ public class QuerySequenceCoverageTest {
     
     @Test
     public final void leftOverlapReadEx() throws IOException, InterruptedException {
-	    	createGFF3File(54000, 54036);
-	    	
-	    	ExpectedException.none();
-	    	Executor exec = execute(getExCmd(54000, 54036));
-	    	
-	    	assertTrue(0 == exec.getErrCode());
-	    	assertTrue(fOutput.exists());
-	    	
-	    	List<String> fileContents;
-	    	try (BufferedReader r= new BufferedReader( new FileReader(fOutput))) {
-	    		fileContents = r.lines().collect(Collectors.toList());
-	    	}
-	    	
-	    	assertEquals(2, fileContents.size());
-	    	assertEquals("sequence	exon	37	0x", fileContents.get(1));
+		createGFF3File(54000, 54036);
+
+		Executor exec = execute(getExCmd(54000, 54036));
+
+        assertEquals(0, exec.getErrCode());
+		assertTrue(fOutput.exists());
+
+		List<String> fileContents;
+		try (BufferedReader r= new BufferedReader( new FileReader(fOutput))) {
+			fileContents = r.lines().toList();
+		}
+
+		assertEquals(2, fileContents.size());
+		assertEquals("sequence	exon	37	0x", fileContents.get(1));
     }
 
     @Test
 	public final void rightOverlapRead() throws Exception {
-    		createGFF3File(54050, 54120);
+		createGFF3File(54050, 54120);
 
-		ExpectedException.none();
 		Executor exec = execute(getCmd(54050, 54120));
-		
-		assertTrue(0 == exec.getErrCode());
+
+        assertEquals(0, exec.getErrCode());
 		assertTrue(fOutput.exists());
 		
 		List<String> fileContents;
 		try (BufferedReader r= new BufferedReader( new FileReader(fOutput))) {
-			fileContents = r.lines().collect(Collectors.toList());
+			fileContents = r.lines().toList();
 		}
 		
 		assertEquals(3, fileContents.size());
@@ -308,36 +286,34 @@ public class QuerySequenceCoverageTest {
     
     @Test
     public final void rightOverlapReadEx() throws Exception {
-	    	createGFF3File(54050, 54120);
-	    	
-	    	ExpectedException.none();
-	    	Executor exec = execute(getExCmd(54050, 54120));
-	    	
-	    	assertTrue(0 == exec.getErrCode());
-	    	assertTrue(fOutput.exists());
-	    	
-	    	List<String> fileContents;
-	    	try (BufferedReader r= new BufferedReader( new FileReader(fOutput))) {
-	    		fileContents = r.lines().collect(Collectors.toList());
-	    	}
-	    	
-	    	assertEquals(2, fileContents.size());
-	    	assertEquals("sequence	exon	71	0x", fileContents.get(1));
+		createGFF3File(54050, 54120);
+
+		Executor exec = execute(getExCmd(54050, 54120));
+
+        assertEquals(0, exec.getErrCode());
+		assertTrue(fOutput.exists());
+
+		List<String> fileContents;
+		try (BufferedReader r= new BufferedReader( new FileReader(fOutput))) {
+			fileContents = r.lines().toList();
+		}
+
+		assertEquals(2, fileContents.size());
+		assertEquals("sequence	exon	71	0x", fileContents.get(1));
     }
 
     @Test
 	public final void subsetRead() throws IOException, InterruptedException {
    		createGFF3File(54030, 54070);
 
-		ExpectedException.none();
 		Executor exec = execute(getCmd(54030, 54070));
-		
-		assertTrue(0 == exec.getErrCode());
+
+        assertEquals(0, exec.getErrCode());
 		assertTrue(fOutput.exists());
 		
 		List<String> fileContents;
 		try (BufferedReader r= new BufferedReader( new FileReader(fOutput))) {
-			fileContents = r.lines().collect(Collectors.toList());
+			fileContents = r.lines().toList();
 		}
 		
 		assertEquals(2, fileContents.size());
@@ -346,21 +322,20 @@ public class QuerySequenceCoverageTest {
     
     @Test
     public final void subsetReadEx() throws IOException, InterruptedException {
-	    	createGFF3File(54030, 54070);
-	    	
-	    	ExpectedException.none();
-	    	Executor exec = execute(getExCmd(54030, 54070));
-	    	
-	    	assertTrue(0 == exec.getErrCode());
-	    	assertTrue(fOutput.exists());
-	    	
-	    	List<String> fileContents;
-	    	try (BufferedReader r= new BufferedReader( new FileReader(fOutput))) {
-	    		fileContents = r.lines().collect(Collectors.toList());
-	    	}
-	    	
-	    	assertEquals(2, fileContents.size());
-	    	assertEquals("sequence	exon	41	0x", fileContents.get(1));
+		createGFF3File(54030, 54070);
+
+		Executor exec = execute(getExCmd(54030, 54070));
+
+		 assertEquals(0, exec.getErrCode());
+		assertTrue(fOutput.exists());
+
+		List<String> fileContents;
+		try (BufferedReader r= new BufferedReader( new FileReader(fOutput))) {
+			fileContents = r.lines().toList();
+		}
+
+		assertEquals(2, fileContents.size());
+		assertEquals("sequence	exon	41	0x", fileContents.get(1));
     }	
 
 }
